--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :admin_sidebar do %>
-  <%#= render 'form' %>
+  <%= render 'form' %>
 <% end %>
 
 <% content_for :admin_page_preview do %>
