--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -1,4 +1,15 @@
 <% content_for :admin_sidebar do %>
+  <a href=""><i class="gcicon gcicon-screen"></i></a>
+  Draft
+  <a href=""><i class="gcicion gcicon-lock"></i></a>
+   <div class="checkbox">
+    <label>
+      <input type="checkbox"> Draft
+    </label>
+  </div>
+  Saved
+  <a href="" class="btn btn-primary">Publish</a>
+  <a href="">Delete</a>
   <%= render 'form' %>
 <% end %>
 
@@ -36,32 +47,33 @@
   <img class="img-responsive pull-left" src="/assets/testimonial-lego.jpg"/>
   <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-        
-<div class="new-module">
-  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-  <div class="clearfix"></div>
-</div>
-
-<div class="new-module media-chooser">
-  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph"></i></a>
-  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo"></i></a>
-  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
-  <div class="clearfix"></div>
-</div>
-
-<div class="new-module media-chooser">
-  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-  <form role="form">
-    <div class="form-group">
-      <div class="input-group">
-        <div class="input-group-addon">Vimeo or YouTube URL</div>
-        <input class="form-control" type="text" placeholder="http://...">
+          
+  <div class="new-module">
+    <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+    <div class="clearfix"></div>
+  </div>
+  
+  <div class="new-module media-chooser">
+    <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
+    <div class="clearfix"></div>
+  </div>
+  
+  <div class="new-module media-chooser">
+    <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+    <form role="form">
+      <div class="form-group">
+        <div class="input-group">
+          <div class="input-group-addon">Vimeo or YouTube URL</div>
+          <input class="form-control" type="text" placeholder="http://...">
+        </div>
       </div>
-    </div>
-  </form>
-  <div class="clearfix"></div>
+    </form>
+    <div class="clearfix"></div>
+</div>
+
 </div>
 
 <%= form_for [refinery, :admin, @page],
