--- a/app/assets/stylesheets/partials/_icons-glass.scss
+++ b/app/assets/stylesheets/partials/_icons-glass.scss
@@ -94,3 +94,12 @@
 .gcicon-move:before {
   content: "F";
 }
+.gcicon-save:before {
+  content: "G";
+}
+.gcicon-publish:before {
+  content: "H";
+}
+.gcicon-draft:before {
+  content: "I";
+}
