--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -14,6 +14,12 @@
 .login{
   background: $off-white;
   padding-top: 120px;
+  @media (max-width: 767px) {
+    padding-top: 45px;  
+  }
+  h2{
+    margin-bottom: 30px;
+  }
 }
 
 
@@ -28,6 +34,28 @@ body p{
 
 .circle-icon{
   @include circle(30px);
+}
+
+a.circle-icon{
+  color: $black;
+  border: 1px solid $black;
+  display: inline-block;
+  text-align: center;
+  padding: 3px 0 0 0;
+  &:link, &:visited {
+    color: $black;
+  }
+  &:hover, &:focus{
+    color: $white;
+    border-color: $primary-dark;
+    background: $primary-dark;
+  }
+}
+
+.circle-icon.fluid-width{
+  padding: 3px 10px 0 10px;
+  min-width: 30px;
+  width: auto;
 }
 
 .input-group{
@@ -84,18 +112,11 @@ body{
     padding: 10px 15px;
     background: $off-white;
     border: 1px solid $grey-2;
+    margin: 45px 60px 0;
     #flash_close{
       float: right;
     }
   }
-}
-
-#admin-page-content{
-  padding: 60px;
-  background: $white;
-  height: calc(100% - 34px);
-  top: 34px;
-  position: relative;
 }
 
 #wrapper{
@@ -184,6 +205,7 @@ body{
     width: calc(100% - 460px);
     height: calc(100% - 34px);
     float: left;
+    padding-top: 34px;
   }
   .inner-wrapper.single-sidebar{
     width: calc(100% - 230px);
@@ -203,11 +225,37 @@ body{
       border-left: 1px solid $grey-2;
       overflow-y: scroll;
       overflow-x: hidden;
+      .page-options{
+        padding: 0 15px;
+        .deliver{
+          margin-bottom: 15px;
+          display: block;
+          margin-left: 0;
+          margin-right: 0;
+        }
+        .url{
+          font-weight: 600;
+          color: $grey-5;
+          [contenteditable=true]{
+            padding-bottom: 1px;
+            color: $primary-dark;
+            &:focus{
+              border-bottom: 1px solid $primary-dark;
+              outline: none;
+            }
+          }
+        }
+      }
     }
   }
 }
 
 #admin-page-content{
+  padding: 15px 60px 60px 60px;
+  background: $white;
+  height: calc(100% - 34px);
+  top: 34px;
+  position: relative;
   ul{
     li{
       border-bottom: 1px solid $grey-2;
@@ -277,9 +325,11 @@ body{
         margin: 0;
       }
       li{
-        padding-left: 30px;
         border-bottom: none;
         border-top: 1px solid $grey-2;
+        .page-row{
+          padding-left: 30px;
+        }
       }
     }
   }
