--- a/app/views/refinery/layouts/login.html.erb
+++ b/app/views/refinery/layouts/login.html.erb
@@ -9,7 +9,7 @@
             <%= render '/refinery/message' %>
           </div>
         </div>
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
           <h2><%= yield :header %></h2>
           <%= yield %>
         </div>
