--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -9,11 +9,8 @@
         <a href="" class="circle-icon fluid-width"><i class="gcicon gcicon-publish"></i> Publish</a>
       </div>
     </div>
-    <div class="form-group">
-      <input type="text" class="form-control input-lg" id="title" placeholder="Page Title">
-    </div>
+    <div class="page-title" contenteditable="true">Page title</div>
     <div class="url">http://serena.ca/<span class="slug" contenteditable="true">page-title</span>/</div>
-    <a href="" class="btn btn-default btn-xs">Ok</a>
     <i class="icon icon-draft"></i> Draft
     
     
