refinery & add bootstrap JS cdn

--- a/app/assets/stylesheets/partials/_icons-glass.scss
+++ b/app/assets/stylesheets/partials/_icons-glass.scss
@@ -103,3 +103,15 @@
 .gcicon-draft:before {
   content: "I";
 }
+.gcicon-lock:before {
+  content: "J";
+}
+.gcicon-unlocked:before {
+  content: "K";
+}
+.gcicon-down:before {
+  content: "L";
+}
+.gcicon-down-lg:before {
+  content: "M";
+}
