--- a/app/views/refinery/admin/_head.html.erb
+++ b/app/views/refinery/admin/_head.html.erb
@@ -8,3 +8,7 @@
 <%= render 'refinery/admin/javascripts' %>
 
 <%= render '/refinery/head_common' %>
+
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
