--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -2,28 +2,56 @@
   <div class="page-options">
     <div class="deliver row">
       <div class="pull-left">
-        <a href="" class="circle-icon"><i class="gcicon gcicon-screen"></i></a>
+        <a href="" class="circle-icon"><i class="gcicon gcicon-screen top-down"></i></a>
       </div>
       <div class="pull-right">
-        <a href="" class="circle-icon"><i class="gc-icon gcicon-save"></i></a>
-        <a href="" class="circle-icon fluid-width"><i class="gcicon gcicon-publish"></i> Publish</a>
+        <a href="" class="circle-icon save-page"><i class="gcicon gcicon-save"></i></a>
+        <a href="" class="circle-icon fluid-width publish-page"><i class="gcicon gcicon-publish"></i> <span>Publish</span></a>
       </div>
     </div>
     <div class="page-title" contenteditable="true">Page title</div>
     <div class="url">http://serena.ca/<span class="slug" contenteditable="true">page-title</span>/</div>
-    <i class="icon icon-draft"></i> Draft
-    
-    
-    <a href=""><i class="gcicion gcicon-lock"></i></a>
-     <div class="checkbox">
-      <label>
-        <input type="checkbox"> Draft
-      </label>
+    <div class="status">      
+      <ul class="list-unstyled">
+        <li class="saved-state"><i class="gcicon gcicon-save"></i>Saved at 10:23</li>
+        <li><a href="" class="password-protect"><i class="gcicon gcicon-lock"></i>Password protect <i class="gcicon gcicon-down"></i></a></li>
+        <li>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Draft
+            </label>
+          </div>
+        </li>
+      </ul>
     </div>
-    Saved
-    <a href="" class="btn btn-primary">Publish</a>
-    <a href="">Delete</a>
-  <%= render 'form' %>
+    
+    <button type="button" class="" data-toggle="collapse" data-target="#demo" aria-expanded="true" aria-controls="demo">
+      <i class="gcicon gcicon-gear"></i> Settings
+    </button>
+    <div id="demo" class="collapse">
+      <div class="form-group">
+        <div class="dropdown-wrapper">
+          <select class="form-control">
+            <option disabled selected>Parent page</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+        <div class="dropdown-wrapper">
+          <select class="form-control">
+            <option disabled selected>Template</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    
+    <a href="" class="delete"><i class="gcicon gcicon-trash"></i> Delete</a>
   </div>
 <% end %>
 
@@ -41,7 +69,7 @@
 
 <div class="page-preview-content">
   <h1 contenteditable="true">Title</h1>
-  <p contenteditable="true">Est Banksy nihil gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
+  <p contenteditable="true">Est Banksy nihil <a href="">new link</a> gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
   <blockquote>
     <p>
     Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.
@@ -69,7 +97,7 @@
   
   <div class="new-module media-chooser">
     <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph top-down"></i></a>
     <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo"></i></a>
     <a href="" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
     <div class="clearfix"></div>
@@ -90,42 +118,6 @@
 
 </div>
 
-<%= form_for [refinery, :admin, @page],
-             :url => (refinery.admin_page_path(@page.nested_url) if @page.persisted?) do |f| %>
-
-  <%= render '/refinery/admin/error_messages', :object => @page, :include_object_name => true %>
-
-  <%= render '/refinery/admin/locale_picker', :current_locale => Globalize.locale %>
-
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title, :class => "larger widest" %>
-  </div>
-
-  <%= render 'form_fields_after_title', :f => f %>
-
-  <div class='field'>
-    <%= render 'form_page_parts', :f => f %>
-  </div>
-
-  <%= render 'form_advanced_options', :f => f %>
-
-  <%= render '/refinery/admin/form_actions', :f => f,
-             :continue_editing => true,
-             :delete_title => t('delete', :scope => 'refinery.admin.pages'),
-             :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @page.title),
-             :before_cancel_button => submit_tag(
-               t('.preview'),
-               :id => 'preview-button',
-               :title => 'Preview page',
-               :name => nil,
-               :class => "wymupdate button",
-               :tooltip => t('.preview_changes')
-             ),
-             :cancel_url => refinery.admin_pages_path %>
-
-  <%= render 'form_new_page_parts', :f => f if Refinery::Pages.new_page_parts %>
-<% end %>
 
 <% end %>
 
