--- a/app/assets/stylesheets/config/_base-variables.scss
+++ b/app/assets/stylesheets/config/_base-variables.scss
@@ -39,7 +39,7 @@ $margin-half: $margin / 2;
 $margin-double: $margin * 2;
 $shadow: 0px 1px 4px 0px rgba(50, 50, 50, 0.1);
 $shadow-solid: inset 0px -2px 0px 0px rgba(50, 50, 50, 0.25);
-$transition: 0.2s ease-in;
+$transition: 0.2s;
 $flip: -1, 1;
 $flip-vertical: 1, -1;
 $scale: 1.1;
